# withflint.com

./: .editorconfig  .gitignore  CNAME  Makefile  README.md  Readme.md  default.nix  flake.nix  index.html  treefmt.toml
.build/: Dockerfile  Makefile  build.sh  buildspec.yml  quotes  web.yaml  withflint.com.sh
.github/workflows/: main.yml  quotes
art/: flint.fig  hiring-process.sketch
backend/: Makefile  Program.fs  backend.fsproj  default.nix  packages.nix
blog/: 0002-culture.md  0003-growth-and-product.md  0004-interviewing-for-engineering-roles.md
content/: 0003-growth-and-product.md
content/blog/: 0001-hiring-secret.md  0002-culture.md  0004-interviewing-for-engineering-roles.md  0005-why-flint.md  0006-built-on-human-rights.md  0007-we-stand-with-our-nurses.md  0008-a-borderless-world.md
content/jobs/: nurse-licensing-specialist-remote.md  nurse-success-advisor-remote.md  senior-product-manager-remote.md  senior-sales-development-representative.md  senior-software-engineer-haskell-elm-nix-remote-africa.md  senior-software-engineer-haskell-elm-nix-remote-europe.md  senior-software-engineer-haskell-elm-nix-remote-north-america.md  senior-software-engineer-haskell-elm-nix-remote-south-america.md  senior-software-engineer-haskell-elm-nix-remote.md  spontaneous-application-remote.md
content/partners/: general-health-care-application-rn-np-lpn-hsp-anywhere-usa.md  ien-cardiac-nurse-houston-tx.md  ien-cardiac-nurse-san-francisco-ca.md  ien-infusion-therapy-rn-corona-ca.md  ien-medical-surgical-rn-austin-tx.md  ien-medical-surgical-rn-corona-ca.md  ien-oncology-nurse-dallas-tx.md  ien-oncology-nurse-los-angeles-ca.md  ien-orthopedic-nurse-houston-tx.md  ien-orthopedic-nurse-san-francisco-ca.md  ien-pediatric-nurse-rn-dallas-tx.md  ien-pediatric-nurse-rn-los-angeles-ca.md  ien-primary-care-rn-corona-ca.md  ien-registered-nurse-clinical-contact-center-austin-tx.md  ien-registered-nurse-clinical-contact-center-dallas-tx.md  ien-registered-nurse-clinical-contact-center-los-angeles-ca.md  ien-registered-nurse-emergency-room-austin-tx.md  ien-registered-nurse-emergency-room-corona-ca.md  ien-registered-nurse-emergency-room-san-francisco-ca.md  ien-registered-nurse-geriatric-austin-tx.md  ien-registered-nurse-geriatric-corona-ca.md  ien-registered-nurse-geriatric-san-francisco-ca.md  ien-registered-nurse-geriatric-san-jose-ca.md  ien-registered-nurse-odessa-tx.md  ien-registered-nurse-operating-room-dallas-tx.md  ien-registered-nurse-operating-room-san-francisco-ca.md  ien-registered-nurse-postpartum-corona-ca.md  ien-registered-nurse-rn-austin-tx.md  ien-registered-nurse-san-francisco-ca.md  ien-rn-geriatric-corona-ca.md  internationally-educated-nurse-medical-surgical-rn-austin-tx.md  internationally-educated-nurse-primary-care-rn-austin-tx.md  internationally-educated-nurse-primary-care-rn-corona-ca.md  internationally-educated-nurse-registered-nurse-operating-room-corona-ca.md  internationally-educated-nurse-registered-nurse-operating-room-san-francisco-ca.md  internationally-educated-nurse-rn-icu-new-mexico.md  internationally-educated-nurse-rn-med-surge-charge-new-mexico.md
elm/: Makefile  default.nix  elm.json  index.html  packages.nix
elm/review/: elm.json
elm/src/: Apply.elm  Device.elm  Layout.elm  Main.elm  Mark.elm  Ports.elm  Styles.elm  SubReturn.elm  Text.elm  Types.elm  Update.elm  View.elm  app.js  index.js
haskell/: .#flake.nix  CHANGELOG.md  default.nix  flake.nix  fourmolu.yaml  hie.yaml  withflint.cabal
haskell/app/: Main.hs
haskell/src/: Flint.hs
haskell/src/Flint/: Apply.hs  Blog.hs  Index.hs  Jobs.hs  Sitemap.hs  Types.hs  Utils.hs
jobs/flint/: senior-software-engineer-remote.md  senior-software-engineer-vancouver-bc.md
jobs/healthcare/: format.fsx  ien-cardiac-nurse-houston-tx.md  ien-certified-registered-nurse-anesthetist-crna-los-angeles-ca.md  ien-infusion-therapy-rn-austin-tx.md  ien-infusion-therapy-rn-corona-ca.md  ien-medical-surgical-rn-austin-tx.md  ien-medical-surgical-rn-corona-ca.md  ien-orthopedic-nurse-san-francisco-ca.md  ien-outpatient-immunization-clinic-rn-austin-tx.md  ien-primary-care-rn-houston-tx.md  ien-primary-care-rn-san-francisco-ca.md  ien-registered-nurse-clinical-contact-center-corona-ca.md  ien-registered-nurse-clinical-contact-center-dallas-tx.md  ien-registered-nurse-clinical-contact-center-los-angeles-ca.md  (+18 more)
static/: browserconfig.xml  fonts.css  intercom.js  privacy.html  site.webmanifest  sitemap.xml  style.css
(+145 files in other folders)
